--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
+        github_token: ${{ secrets.SYNC_PAT }}
         persist-credentials: false
     - name: repo-sync
       uses: repo-sync/github-sync@v2
@@ -18,5 +19,21 @@ jobs:
         source_repo: "https://github.com/we-kode/mml.administration-app"
         source_branch: "master"
         destination_branch: "master"
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.SYNC_PAT }}
         sync_tags: "true"
+    - uses: actions-ecosystem/action-get-latest-tag@v1
+      with:
+        semver_only: true
+        initial_version: '0.0.0'
+      id: get-latest-tag
+    - uses: actions-ecosystem/action-push-tag@v1
+      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag.outputs.tag != '0.0.0'}}
+      with:
+        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+    
+    - name: create release
+      uses: ncipollo/release-action@v1
+      if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag.outputs.tag != '0.0.0'}}
+      with:
+        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+        token: ${{ secrets.SYNC_PAT }}
