--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        github_token: ${{ secrets.SYNC_PAT }}
+        token: ${{ secrets.SYNC_PAT }}
         persist-credentials: false
     - name: repo-sync
       uses: repo-sync/github-sync@v2
