--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,17 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
+      - uses: actions-ecosystem/action-get-latest-tag@v1
+        with:
+          semver_only: true
+          initial_version: '0.0.0'
+        id: get-latest-tag
       # Runs a set of commands using the runners shell
       - name: Customizing
         run: |
           chmod +x customize
           ./customize
+          sed -i -E "s/version: .*/version: ${{ steps.get-latest-tag.outputs.tag }}/" "pubspec.yaml"
       - name: Tar files
         run: tar -cvf mml.administration-app.tar .
       - name: Artefact customized version
