--- a/.github/workflows/repo_sync.yml
+++ b/.github/workflows/repo_sync.yml
@@ -31,11 +31,11 @@ jobs:
     - uses: actions-ecosystem/action-push-tag@v1
       if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag-semver.outputs.tag != '0.0.0'}}
       with:
-        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+        tag: ${{ steps.get-latest-tag-semver.outputs.tag }}-ecg
     
     - name: create release
       uses: ncipollo/release-action@v1
       if: ${{ !endsWith( steps.get-latest-tag.outputs.tag, '-ecg' ) &&  steps.get-latest-tag-semver.outputs.tag != '0.0.0'}}
       with:
-        tag: ${{ steps.get-latest-tag.outputs.tag }}-ecg
+        tag: ${{ steps.get-latest-tag-semver.outputs.tag }}-ecg
         token: ${{ secrets.SYNC_PAT }}
