--- a/config/debian/gui/ecg-media.desktop
+++ b/config/debian/gui/ecg-media.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
-Name=My Media Lib
-GenericName=My Media Lib
+Name=ECG Mediathek
+GenericName=ECG Mediathek
 Terminal=false
 Type=Application
 Categories=Utility
