--- a/config/debian/debian.yaml
+++ b/config/debian/debian.yaml
@@ -4,7 +4,7 @@ flutter_app:
   parent: /usr/local/lib
 
 control:
-  Package: ECG Mediathek
+  Package: ECG-Mediathek
   Version: 1.0.0
   Architecture: amd64
   Essential: no
