--- a/config/app.cfg
+++ b/config/app.cfg
@@ -1,4 +1,4 @@
-appId=de.ecg.medialib_admin
+appId=de.ecg.medialib.admin
 appTitle=ECG Mediathek
 appTitle_de=ECG Mediathek
 appTitle_en=ECG media library
