--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,38 +126,52 @@ jobs:
         run: |
            Remove-Item -Path ${{ steps.create-pfx.outputs.PFX_PATH }};
   
- # build-and-release-macos:
- #   runs-on: macos-latest
- #   needs: [prepare]
- #   steps:
- #     - uses: actions/checkout@v3
- #     - uses: actions/download-artifact@v3
- #       with:
- #         name: ECG-Medialib-Admin-Custom
- #     - uses: subosito/flutter-action@v1
- #       with:
- #         channel: 'stable'
- #         flutter-version: '2.10.0'
- #     - name: Install project dependencies
- #       run: flutter pub get
- #     - name: Generate intermediates
- #       run: |
- #         flutter pub run build_runner build --delete-conflicting-outputs
- #         flutter gen-l10n
- #     - name: Enable macOS build
- #       run: flutter config --enable-macos-desktop
- #     - name: Build artifacts
- #       run: flutter build macos --release
- #     - name: Archive Release
- #       uses: thedoctor0/zip-release@master
- #       with:
- #         type: 'zip'
- #         filename: ECG-Medialib-Admin-${{github.ref_name}}-macos.zip
- #         directory: build/macos/Build/Products/Release
- #     - name: macOS Release
- #       uses: softprops/action-gh-release@v1
- #       if: startsWith(github.ref, 'refs/tags/')
- #       env:
- #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
- #       with:
- #         files: build/macos/Build/Products/Release/ECG-Medialib-Admin-${{github.ref_name}}-macos.zip
+  build-and-release-macos:
+    runs-on: macos-latest
+    needs: [prepare]
+    env:
+      MACOS_APP_RELEASE_PATH: build/macos/Build/Products/Release
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: ECG-Medialib-Admin-Custom
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable'
+      - name: Install project dependencies
+        run: flutter pub get
+      - name: Generate intermediates
+        run: |
+          flutter pub run build_runner build --delete-conflicting-outputs
+          flutter gen-l10n
+      - name: Enable macOS build
+        run: flutter config --enable-macos-desktop
+      - name: Build artifacts
+        run: flutter build macos --release
+      - name: Create a dmg
+        run: |
+          echo "Install create-dmg"
+          brew install create-dmg
+          ls
+          cd $MACOS_APP_RELEASE_PATH
+
+          create-dmg \
+            --volname "<YOUR-APP-NAME>" \
+            --window-pos 200 120 \
+            --window-size 800 529 \
+            --icon-size 130 \
+            --text-size 14 \
+            --icon "<YOUR-APP-NAME>.app" 260 250 \
+            --hide-extension "<YOUR-APP-NAME>.app" \
+            --app-drop-link 540 250 \
+            --hdiutil-quiet \
+            "ECG-Medialib-Admin-${{github.ref_name}}-macos.dmg" \
+            "<YOUR-APP-NAME>.app"
+      - name: macOS Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: $MACOS_APP_RELEASE_PATH/ECG-Medialib-Admin-${{github.ref_name}}-macos.dmg
