--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -166,11 +166,17 @@ jobs:
             --hdiutil-quiet \
             "ECG-Medialib-Admin-${{github.ref_name}}-macos.dmg" \
             "ECG Mediathek.app"
-          cp -R "ECG Mediathek.app" "ECG-Medialib-Admin-${{github.ref_name}}-macos.app"
+          cp -R "ECG Mediathek.app" "rel/ECG-Medialib-Admin-${{github.ref_name}}-macos.app"
+      - name: Archive Release
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          filename: ECG-Medialib-Admin-${{github.ref_name}}-macos.zip
+          directory: rel
       - name: macOS Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: "build/macos/Build/Products/Release/ECG-Medialib-Admin-${{github.ref_name}}-macos.app"
+          files: rel/ECG-Medialib-Admin-${{github.ref_name}}-macos.app
