--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -173,7 +173,7 @@ jobs:
         with:
           type: 'zip'
           filename: ECG-Medialib-Admin-${{github.ref_name}}-macos.zip
-          directory: rel
+          directory: build/macos/Build/Products/Release/rel
       - name: macOS Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
