--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
           ./customize
           sed -i -E "s/version: [0-9]+.[0-9]+.[0-9]+\+[0-9]+/version: $ver_dump+${{github.run_number}}/" "./mml.administration-app/pubspec.yaml"
           sed -i -E "s/#define VERSION_AS_STRING \"1.0.0\"/#define VERSION_AS_STRING \"$ver_dump\"/" "./mml.administration-app/windows/runner/Runner.rc"
+          sed -i -E "s/				DEVELOPMENT_TEAM = S79Z2R2WAC;/				DEVELOPMENT_TEAM = ${{ secrets.APPLE_TEAM_ID }};/" "./mml.administration-app/macos/Runner.xcodeproj/project.pbxproj"
       - name: Artefact customized version
         uses: actions/upload-artifact@v3
         with:
