--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         run: flutter pub get
       - name: Generate intermediates
         run: |
-          flutter pub run build_runner build --delete-conflicting-outputs
+          dart run build_runner build --delete-conflicting-outputs
           flutter gen-l10n
       - name: Enable linux build
         run: flutter config --enable-linux-desktop
@@ -96,7 +96,7 @@ jobs:
         run: flutter pub get
       - name: Generate intermediates
         run: |
-          flutter pub run build_runner build --delete-conflicting-outputs
+          dart run build_runner build --delete-conflicting-outputs
           flutter gen-l10n
       - name: Enable windows build
         run: flutter config --enable-windows-desktop
